tests/positive/basic/isblank_basic/input.ci
void main(string[] args) {
    print(toString(isBlank("")) + "\n");
    print(toString(isBlank("\t\n")) + "\n");
    print(toString(isBlank("  x")) + "\n");
}
