tests/negative/runtime/bytes_to_float_wrong_size/input.ci
void main(string[] args) {
    print(toString(bytesToFloat([0x01, 0x02, 0x03])) + "\n");
}
